--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -33,12 +33,18 @@
     .row
       .large-12.columns.text-left
         - if @post.photos.size == 1
-          = image_tag @post.photos.first.filename.url(:main)
+          - if @posts.photos.first.filename_width < 1200
+            = image_tag @post.photos.first.filename.url
+          - else
+            = image_tag @post.photos.first.filename.url(:main)
         - elsif @post.photos.size > 1
           %ul{:"data-orbit" => ""}
             - @post.photos.each do |p|
               %li
-                = image_tag p.filename.url(:main)  
+                - if p.filename_width < 1200
+                  = image_tag p.filename.url
+                - else
+                  = image_tag p.filename.url(:main)  
 
     .row{:"data-equalizer" => ""}
       .small-7.columns.text-left.post_body{:"data-equalizer-watch" => ""}
