--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
       var switchTo5x=true;
     %script{:src => "http://w.sharethis.com/button/buttons.js", :type => "text/javascript"}
     :javascript
-      stLight.options({publisher: "fec021ac-bd8c-4517-b7db-cd4a0d0ad212", doNotHash: false, doNotCopy: false, hashAddressBar: true});
+      stLight.options({publisher: "fec021ac-bd8c-4517-b7db-cd4a0d0ad212", doNotHash: false, doNotCopy: false, hashAddressBar: false});
       
   %body
     = javascript_include_tag "application"
