--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,11 +1,21 @@
-= semantic_form_for post, :html => {:multipart => true } do |f|
+= semantic_form_for @post, :html => {:multipart => true } do |f|
   .row 
     .small.6.columns= f.input :title
   .row
-    .small-12.columns= f.input :body, :input_html => {:clasS => 'rich_text_editor' }
+    .small-12.columns= f.input :body, :input_html => {:class => 'ckeditor' }
   .row 
-    .small-12.columns= f.input :extended, :input_html => {:clasS => 'rich_text_editor' }
+    .small-12.columns= f.input :extended, :input_html => {:class => 'ckeditor' }
   .row
     .small-5.columns= f.input :image
-    
+  .row
+    .small-5.columns= f.input :tag_list
+  .row
+    = f.fields_for :photos do |ff|
+      - unless ff.object.filename.blank?
+        = image_tag ff.object.filename.url(:midsize)
+        = ff.input :filename
+  
+      = f.link_to_add 'add one or more images', :photos
+      .row
+        .small-6.columns= f.submit    
     
