--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,7 +45,7 @@
               %ul.dropdown
                 %li= link_to 'Ptarmigan', 'http://ptarmigan.ee/'
                 %li= link_to 'Pixelache', 'http://pixelache.ac/'
-                %li= link_to 'Lied Music', 'http://liedmusic.co.uk/'
+                //%li= link_to 'Lied Music', 'http://liedmusic.co.uk/'
                 %li= link_to 'Cenotaph', 'http://cenotaph.org/'
                 %li= link_to 'Slothrop\'s', 'http://slothrops.ee/'
               
