--- a/app/views/frontpage/_activity_feed.html.haml
+++ b/app/views/frontpage/_activity_feed.html.haml
@@ -1,7 +1,14 @@
-.row
-  .small-3.columns.text-center
-    - if activity.image?
-      = image_tag activity.image.url(:midsize)
-  .small-9.columns.text-left
-    %h6.subheading= activity.title
+
+- unless activity.image.url.blank?
+  .activity_image
+    = image_tag activity.image.url(:midsize)
+
+  .activity_info
+    %h6.subheading= activity.title.gsub(/^Post:\s+/, '')
     .project_name= activity.source.humanize
+    %medium= activity.created_at.strftime('%d %b %Y')
+- else
+  .activity_info_noimg
+    %h6.subheading= activity.title.gsub(/^Post:\s+/, '')
+    .project_name= activity.source.humanize
+    %medium= activity.created_at.strftime('%d %b %Y')
