--- a/app/views/frontpage/_full_width_post.html.haml
+++ b/app/views/frontpage/_full_width_post.html.haml
@@ -1,7 +1,7 @@
 
 .row{:"data-magellan-destination" => "top#{post.id.to_s}"}
   .small-12.columns.text-center
-    %h2.subheader= link_to post.title, post
+    %h2.subheader= link_to raw(post.title), post
     %medium.date= l post.updated_at, :format => :long   
 - if post.photos.empty?
   .row
