image removal links

--- a/app/assets/stylesheets/icewhistle.css.scss
+++ b/app/assets/stylesheets/icewhistle.css.scss
@@ -515,6 +515,10 @@ medium.date {
   
 }
 
+.post_row {
+  margin-bottom: 40px;
+}
+
 .related_posts {
   margin-bottom: 20px !important;
   .date {
