--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -11,7 +11,7 @@
 
     
 - @posts.in_groups_of(3).each do |group|
-  .row{:"data-equalizer" => ""}
+  .row.post_row{:"data-equalizer" => ""}
     - group.each do |post|
       - next if post.nil?
       .small-4.columns= render :partial => 'posts/post_excerpt', :locals => {:post => post}
