--- a/app/views/admin/jobs/new.html.erb
+++ b/app/views/admin/jobs/new.html.erb
@@ -1,8 +1,12 @@
+<div class="row">
+<div class="small-12 columns">
 <h1>New job</h1>
-
-
+</div></div>
 
 <%= form_for([:admin,@job]) do |f| %>
+<div class="row">
+<div class="small-12 columns"
+
   <p>
     <b>Started</b><br />
     <%= f.text_field :started %>
@@ -72,8 +76,8 @@
     <%= f.text_field :realdate %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit "Create", :class => [:button, :radius]  %>
   </p>
 <% end %>
 
-<%= link_to 'Back', admin_jobs_path %>
+<%= link_to 'Back', admin_jobs_path, :class => [:button, :radius] %>
