--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -4,8 +4,9 @@
   .row
     .columns.text-left
       %h1= raw @post.title
-      %em
-        %medium= "posted: " + l(@post.updated_at, :format => :long   )
+      .metadata
+        %em
+          %medium= "posted: " + l(@post.updated_at, :format => :long   )
 
   - if @post.photos.empty?
     .row
@@ -33,7 +34,7 @@
     .row
       .large-12.columns.text-left
         - if @post.photos.size == 1
-          - if @posts.photos.first.filename_width < 1200
+          - if @post.photos.first.filename_width < 1200
             = image_tag @post.photos.first.filename.url
           - else
             = image_tag @post.photos.first.filename.url(:main)
