--- a/app/views/posts/_post_sidebar.html.haml
+++ b/app/views/posts/_post_sidebar.html.haml
@@ -19,6 +19,6 @@
     
 .share_this= share_this(@post)
 - if current_user
-  = link_to 'edit this post', edit_post_path(@post)
+  = link_to 'edit this post', edit_admin_post_path(@post)
   %br
   = link_to 'delete this post', @post, :confirm => 'Are you sure?', :method => :delete
