upgrade to rails 4.2

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,5 +2,6 @@
  *= require_self
  *= require foundation_and_overrides
  *= require icewhistle
- *= require mp3
+ *= require mediaelement_rails
+
  */
