--- a/app/views/frontpage/_image_top_post.haml
+++ b/app/views/frontpage/_image_top_post.haml
@@ -1,6 +1,5 @@
-.row
-  .small-12.columns.text-center
-    %h3.subheading= link_to raw(post.title), post
+.text-center
+  %h3.subheading= link_to raw(post.title), post
     
 - if post.image? && post.photos.empty?
   .row
