--- a/app/views/frontpage/_tweet.html.haml
+++ b/app/views/frontpage/_tweet.html.haml
@@ -4,6 +4,6 @@
   .small-7.columns.text-left
     - twit = twitter_status
     %h6.subheading= raw twit.first
-  .small-3.columns
+  .small-3.columns.twitter_column
     = link_to 'Follow @hyksos', 'http://twitter.com/hyksos', :class => "twitter-follow-button"
     %script{:src => "http://platform.twitter.com/widgets.js", :type => "text/javascript"}
