--- a/app/views/frontpage/index.html.haml
+++ b/app/views/frontpage/index.html.haml
@@ -1,13 +1,12 @@
 #magellan{:"data-magellan-expedition" => :fixed, :"data-options" => "destination_threshold:64;threshold:64;throttle_delay:50;"}
-  .row
-    .small-12.columns
-      %dl.sub-nav
-        %dd.first.active{:"data-magellan-arrival" => "top#{@posts.first.id.to_s}"}= link_to @posts.first.title, "#top#{@posts.first.id.to_s}"
-        %dd{:"data-magellan-arrival" => "activities"}= link_to 'Project news and events', "#activity_front"
-        %dd{:"data-magellan-arrival" => "recent_posts"}= link_to 'Recent posts', "#recent_posts"
-        %dd{:"data-magellan-arrival" => "blindness"}= link_to 'Blindness', '#blindness_container'
-        %dd{:"data-magellan-arrival" => "bookmarks_front"}= link_to 'Recently read', '#bookmarks_front'
-        %dd{:"data-magellan-arrival" => "less_recent"}= link_to 'Less recent posts', '#less_recent'
+
+  %dl.sub-nav
+    %dd.first.active{:"data-magellan-arrival" => "top#{@posts.first.id.to_s}"}= link_to @posts.first.title, "#top#{@posts.first.id.to_s}"
+    %dd{:"data-magellan-arrival" => "activities"}= link_to 'Project news and events', "#activity_front"
+    %dd{:"data-magellan-arrival" => "recent_posts"}= link_to 'Recent posts', "#recent_posts"
+    %dd{:"data-magellan-arrival" => "blindness"}= link_to 'Blindness', '#blindness_container'
+    %dd{:"data-magellan-arrival" => "bookmarks_front"}= link_to 'Recently read', '#bookmarks_front'
+    %dd{:"data-magellan-arrival" => "less_recent"}= link_to 'Less recent posts', '#less_recent'
 
 
 %a{:name => "top#{@posts.first.id.to_s}"}       
@@ -16,27 +15,25 @@
 
 %div#tweet_front= render :partial => 'tweet'
 
-%a{:name => "activities"}
-#activity_front
-  .row
-    .columns.text-center
-      %h2 Projects: news and events
-    .activities_front
-      - Cash.visible.where("source = 'pixelache' or source = 'ptarmigan'").order("cashes.order DESC").limit(6).each do |activity|
-        = link_to activity.link_url, :target => :_blank do
-          .small-4.columns.item= render :partial => 'activity_feed', :locals => {:activity => activity}
-              
-      
-    / .small-4.columns.panel
-    /   = render :partial => 'crumbles', :locals => {:crumbles => @crumbles}
-    %div{:"data-magellan-destination" => 'activities'} &nbsp;
+/ %a{:name => "activities"}
+/ #activity_front
+/   .row
+/     .columns.text-center
+/       %h2 Projects: news and events
+/     .activities_front
+/       - Cash.visible.where("source = 'pixelache' or source = 'ptarmigan'").order("cashes.order DESC").limit(6).each do |activity|
+/         = link_to activity.link_url, :target => :_blank do
+/           .small-4.columns.item= render :partial => 'activity_feed', :locals => {:activity => activity}
+/
+/
+/     / .small-4.columns.panel
+/     /   = render :partial => 'crumbles', :locals => {:crumbles => @crumbles}
+/     %div{:"data-magellan-destination" => 'activities'} &nbsp;
 
 #recent_posts.row{:"data-equalizer" => ""}
-  .columns.text-center
-    %h2 Recent posts
-    - @posts[1..3].each do |post|
-      .large-4.columns{:"data-equalizer-watch" => ""}= render :partial => 'image_top_post', :locals => {:post => post}
-      %div{:"data-magellan-destination" => 'recent_posts'} &nbsp;
+  .columns.text-center{:"data-magellan-destination" => 'recent_posts'}
+    - @posts[1..2].each do |post|
+      .small-10.medium-6.columns{:"data-equalizer-watch" => ""}= render :partial => 'image_top_post', :locals => {:post => post}
 
 
 - Cash.visible.where(:source => "blindness").where("image_width > 760").order('created_at DESC').limit(1).each do |bp|
@@ -45,7 +42,7 @@
 #bookmarks_front{:style => 'background-color: #F2F27C'}= render :partial => 'bookmark', :locals => {:link => Cash.where(:source => 'bookmarks').order('created_at DESC').limit(25) }
 
 #less_recent.row{:"data-equalizer" => "", :"data-magellan-destination" => "less_recent"}
-  - @posts[4..5].each do |post|
+  - @posts[3..4].each do |post|
     .large-6.columns{:"data-equalizer-watch" => ""}= render :partial => 'title_top_post', :locals => {:post => post}
   .columns.text-center
     %h6= link_to 'Older posts', posts_path(:page => 2), class: [:button, :tiny]
